--- a/css/estilos.css
+++ b/css/estilos.css
@@ -548,7 +548,7 @@ header{
 footer {
     position: relative;
     width: 100%;
-    background: #3586ff;
+    background: #4F75FF;
     padding: 20px 50px;
     display: flex;
     justify-content: center;
@@ -590,15 +590,14 @@ footer .social_icon-footer li a:hover {
 
 footer .menu_footer li a {
     font-size: 1.2em;
-    color: #fafdf5;
+    color: white;
     margin: 0 10px;
     display: inline-block;
     text-decoration: none;
-    opacity: 0.75;
 }
 
 footer .menu_footer li a:hover {
-    color: #4134c3;
+    color: #6439FF;
     opacity: 1;
 }
 
@@ -615,7 +614,7 @@ footer .wave {
     left: 0;
     width: 100%;
     height: 100px;
-    background: url(../Imagenes/Footer/wave.png);
+    background: url(../imagenes/Footer/wave_color_hex.png);
     background-size: 1000px 100px;
 }
 
